--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,13 @@
 <resources>
     <color name="colorPrimary">#02BBD2</color>
     <color name="colorPrimaryDark">#229EB2</color>
-    <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorGreenDark">#016c57</color>
+    <color name="colorGreenPrimary">#08ae9e</color>
+    <color name="colorGreenTask">#c6e9e5</color>
+    <color name="colorGreenTaskAlpha">#FFC6E9E5</color>
+    <color name="colorGreenTask2Alpha">#FF97D7CF</color>
+    <color name="colorGreenTask3Alpha">#FFE4EAFD</color>
+    <color name="colorPinkDarkAlpha">#FFA8BAF9</color>
 </resources>
