--- a/app/src/main/res/layout/content_add_expense.xml
+++ b/app/src/main/res/layout/content_add_expense.xml
@@ -5,6 +5,7 @@
     android:id="@+id/content_add_expense"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.aldo.finanzapp.activities.AddExpenseActivity"
     tools:showIn="@layout/app_bar_add_expense"
     android:padding="12dp"
@@ -12,7 +13,7 @@
     >
 
     <EditText
-        android:id="@+id/input_text_expense"
+        android:id="@+id/input_text_expense_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Nombre de la cuenta"/>
