--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,7 +14,7 @@
     </TextView>
 
     <TextView
-        android:id="@+id/value"
+        android:id="@+id/amount"
         android:layout_below="@id/billsName"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,7 +24,7 @@
 
     <TextView
         android:id="@+id/finish_date"
-        android:layout_below="@id/value"
+        android:layout_below="@id/amount"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="2dp"
