--- a/app/src/main/res/layout/activity_listar_cuentas.xml
+++ b/app/src/main/res/layout/activity_listar_cuentas.xml
@@ -38,7 +38,8 @@
         android:layout_height="wrap_content"
         android:paddingRight="15dp"
         android:paddingLeft="15dp"
-        android:paddingTop="10dp">
+        android:paddingTop="10dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <TextView
             android:id="@+id/bills_to_pay_text"
