--- a/app/src/main/res/layout/content_add_expense.xml
+++ b/app/src/main/res/layout/content_add_expense.xml
@@ -18,32 +18,35 @@
         android:layout_height="wrap_content"
         android:hint="Nombre de la cuenta"/>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <EditText
             android:id="@+id/input_text_amount"
-            android:layout_width="140dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
-            android:hint="monto"/>
+            android:hint="Monto"
+            android:layout_weight="10"/>
         <Button
-            android:id="@+id/button_calendar"
+            android:id="@+id/button_calendar2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Fecha"
             android:layout_alignParentRight="true"
-            android:onClick="chooseDate"
-            />
-    </RelativeLayout>
+            android:layout_weight="7"
+            android:onClick="showDatePickerDialog" />
+    </LinearLayout>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
         android:id="@+id/input_text_description"
-        android:hint="Descripcion"
-        android:lines="3"/>
+        android:hint="Descripcion"/>
+
+
 
 
 </LinearLayout>
