--- a/app/src/main/res/layout/activity_listar_cuentas.xml
+++ b/app/src/main/res/layout/activity_listar_cuentas.xml
@@ -69,13 +69,13 @@
     </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab2"
+        android:id="@+id/fab_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_input_add"
         android:tint="@android:color/white"
-        app:backgroundTint="@color/colorGreenDark"/>
+        app:backgroundTint="@color/colorPrimaryDark"/>
 
 </android.support.design.widget.CoordinatorLayout>
