--- a/app/src/main/res/layout-land/graph_view.xml
+++ b/app/src/main/res/layout-land/graph_view.xml
@@ -15,25 +15,27 @@
         xmlns:android="http://schemas.android.com/apk/res/android" />
 
     <Button
-        android:id="@+id/button_30j"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="30j"
-        android:layout_below="@+id/graph"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="13dp"/>
-
-    <Button
         android:id="@+id/button_15j"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="15j"
-        android:layout_marginRight="38dp"
+        android:layout_marginLeft="159dp"
+        android:layout_marginStart="159dp"
         android:layout_alignBaseline="@+id/button_30j"
         android:layout_alignBottom="@+id/button_30j"
-        android:layout_toLeftOf="@+id/button_30j"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <Button
+        android:id="@+id/button_30j"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="30j"
+        android:layout_marginLeft="110dp"
+        android:layout_marginStart="110dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/button_15j"
+        android:layout_toEndOf="@+id/button_15j"/>
 
 </RelativeLayout>
 
